# pdf_manipulation

./: pyproject.toml
.github/workflows/: test.yaml
src/: embed_file.py  remove_white_bkg.py
tests/: conftest.py  test_scripts.py
tests/samples/: plot_01.py  plot_02.py
